--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -4,7 +4,7 @@
 
 
 
-\chapter{Prefácio}\label{prefuxe1cio}
+\chapterspecial{Prefácio}{}{}\label{prefuxe1cio}
 
 ``Aliás,\footnote{Esta tradução baseia-se na edição crítica
   Colli-Montinari. \emph{Sämtliche Werke. Kritische Studienausgabe}. Bd.
