--- a/LIVRO.tex
+++ b/LIVRO.tex
@@ -1,4 +1,4 @@
-\documentclass[trimframe,showtrims,11pt,conselho,spreadimages]{memoir}
+\documentclass[semcabeco,trimframe,showtrims,11pt,conselho,spreadimages]{memoir}
 
 \usepackage{commands}
 \usepackage[bolso]{hedra}
