Primeira leitura, emendas, capítulos 4 a 6

--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -792,8 +792,6 @@ tornará uma primeira.
 
   \chapter{Capítulo 4}\label{capuxedtulo-4}
 
-  \begin{enumerate}
-  \item
     Esses são os serviços que a história pode prestar à vida; todo homem
     e todo povo precisam, segundo seus objetivos, forças e necessidades,
     de um certo conhecimento do passado, às vezes monumental, às vezes
@@ -890,7 +888,7 @@ tornará uma primeira.
     enciclopédias reside apenas naquilo que nela consta, no conteúdo,
     não naquilo que é capa e invólucro; e assim é toda a cultura
     moderna, interior; por fora, o encadernador imprimiu algo como:
-    Manual de cultura interior para bárbaros da exterioridade. Aliás,
+    \emph{Manual de cultura interior para bárbaros da exterioridade}. Aliás,
     essa contradição entre interior e exterior torna o exterior mais
     bárbaro do que ele devia ser, quando um povo rude cresce a partir de
     suas necessidades grosseiras apenas. Pois que artifício resta à
@@ -913,7 +911,7 @@ tornará uma primeira.
     prescreve uma cultura deve ser, em toda efetividade, apenas uma
     unidade viva e não se dividir penosamente em interior e exterior,
     entre conteúdo e forma. Quem quer incentivar e fomentar a cultura de
-    um povo, incentiva e fomenta essa unidade superior e contribui com o
+    um povo incentiva e fomenta essa unidade superior e contribui com o
     aniquilamento da aculturação moderna em favor de uma cultura
     verdadeira; ele ousa refletir sobre como a saúde de um povo,
     prejudicada pela história, pode ser recuperada, como ele pode
@@ -988,7 +986,7 @@ tornará uma primeira.
     observador perceber quão desesperada soa a frase: nós, alemães,
     sentimos com abstração; fomos todos arruinados pela história -- uma
     frase que destruiria pela raiz toda esperança em uma cultura
-    nacional futura: pois essa esperança cresce a partir da crença na
+    nacional futura, pois essa esperança cresce a partir da crença na
     autenticidade e imediatidade do sentimento alemão, da crença na
     interioridade íntegra; o que ainda deve ser esperançado, acreditado,
     quando a fonte da crença e da esperança maculou-se, quando a
@@ -1004,7 +1002,7 @@ tornará uma primeira.
     nacional, sabe que seu sentimento é falsificado e colorido. De vez
     em quando, o julgamento e o gosto do próprio indivíduo poderiam
     tornar-se mais refinados e sublimes -- isso não lhe traz nenhuma
-    vantagem: é-lhe torturante igualmente ter de professar uma seita e
+    vantagem: é-lhe igualmente torturante ter de professar uma seita e
     não ser mais necessário para o seu povo. Talvez ele preferisse
     enterrar seu tesouro, porque sente náusea de tornar-se,
     pretensiosamente, o protetor de uma seita, enquanto seu coração se
@@ -1013,7 +1011,7 @@ tornará uma primeira.
     é direcionar seu ódio exaltado contra aquele feitiço inibidor,
     contra as barreiras erguidas na chamada cultura de seu povo, para
     que, como juiz, ao menos condenar aquilo que é, para ele, vivente e
-    procriador, aniquilamento e desonra: assim ele troca a intuição
+    procriador, aniquilamento e desonra: assim, ele troca a intuição
     profunda de seu destino pelo prazer divino da criação e do auxílio e
     acaba como conhecedor solitário, como sábio mais que saturado. É o
     espetáculo mais doloroso: quem o vê em sua totalidade conhece aqui
@@ -1022,23 +1020,22 @@ tornará uma primeira.
     deve ser novamente construída, aquela cratera entre o interno e o
     externo deve desaparecer sob as marteladas da necessidade. Que
     artifícios ele deve usar? Novamente, nele só permanece o seu
-    profundo conhecimento: ele tenta plantar uma necessidade nesse
-    conhecimento que se expressa, se expande: e assim, da necessidade
+    profundo conhecimento, ele tenta plantar uma necessidade nesse
+    conhecimento que se expressa, se expande: e, assim, da necessidade
     vigorosa surgirá o ato vigoroso. E com isso não deixo nenhuma dúvida
     de onde tomo exemplo daquela carência, daquela necessidade, daquele
     conhecimento: então devo, expressamente, deixar aqui meu testemunho
     de que é a \emph{unidade alemã} em seu sentido superior que
     ansiamos, e que ansiamos com mais fervor do que a unidade política,
-    \emph{a unidade do espírito e vida alemães pelo aniquilamento da
+    \emph{a unidade da vida e espírito alemães pelo aniquilamento da
     contradição entre forma e conteúdo, entre interioridade e
-    convenção}. --
-  \end{enumerate}
+    convenção}.
 
-  \chapter{Capitulo 5}\label{capitulo-5}
+  \chapter{Capítulo 5}\label{capítulo-5}
 
 
-A saturação de uma época com a história me parece ser adversa e perigosa
-em relação à vida em cinco aspectos: com tal excesso cria-se aquele
+A saturação de uma época com a história me parece ser adversa e perigosa,
+em relação à vida, em cinco aspectos: com tal excesso cria-se aquele
 contraste já mencionado entre interior e exterior, enfraquecendo assim a
 personalidade; por conta desse excesso, uma época imagina possuir a mais
 rara virtude, a justiça, em maior grau do que outras épocas; por meio
@@ -1047,23 +1044,23 @@ amadurecimento tanto do indivíduo quanto da totalidade; através desse
 excesso, planta-se, a qualquer momento, a crença nociva na velhice da
 humanidade, a crença de ser tardio e epígono; graças a esse excesso, uma
 época adquire uma perigosa disposição à ironia sobre si mesma e, com
-ela, uma disposição ainda mais perigosa ao cinismo: mas, neste caso,
+ela, uma disposição ainda mais perigosa ao cinismo; mas, neste caso,
 nela amadurece uma práxis egoísta e astuta, que debilita as forças
 vitais e por fim as destrói.
 
 E retornando à nossa sentença inicial: o homem moderno padece de uma
-personalidade enfraquecida. Assim como o romano do império tornou-se
-não-romano no que diz respeito ao que o mundo contemporâneo lhe tinha a
+personalidade enfraquecida. Assim, como o romano do império tornou-se
+não romano no que diz respeito ao que o mundo contemporâneo lhe tinha a
 servir, assim como ele se perdeu no influxo de estrangeiros e se
 degenerou no carnaval cosmopolita de deuses, costumes e artes, o mesmo
 acontece com o homem moderno, que continuamente prepara para si a festa
 de uma exposição universal através de seus artistas históricos; ele se
 tornou o espectador que aprecia e perambula, chegando a um estado em que
 mesmo grandes guerras e revoluções mal podem modificar algo, mesmo que
-em um instante. Mal a guerra acabou e já se transformou, aos milhares,
+em um instante. Mal a guerra acabou, já se transformou, aos milhares,
 em papel impresso, sendo logo servida como o mais novo aperitivo para o
 paladar enfastiado do ávido pela história. Parece quase impossível que
-um som potente e cheio se produza mesmo quando se tocam as cordas com
+um som potente e cheio se produza, mesmo quando se tocam as cordas com
 força: logo ele se amortece, no instante seguinte ele já soa suavemente
 histórico, fugidio e fraco. Falando moralmente, vocês não mais conseguem
 instituir o sublime, seus atos são toques súbitos, não trovões
@@ -1074,7 +1071,9 @@ entender, calcular, compreender, no instante em que deveria suportar,
 numa longa convulsão, o incompreensível e o sublime, pode ser chamado de
 racional, mas apenas no sentido em que Schiller fala do senso dos
 racionais\footnote{Referência ao poema ``As palavras de fé'', de
-  Schiller. Em alemão: ``Verstand der Verständige''.}: ele não vê o
+  Schiller. Em alemão: ``Verstand der Verständige
+  % Conferir original, não encontrei o poema pelo alemão
+  ''.}: ele não vê o
 mesmo que uma criança vê, não ouve o mesmo que uma criança ouve; mas
 esse ``mesmo'' é o mais importante: pois, ao não entendê-lo, seu senso é
 mais infantil do que o da criança e mais ingênuo do que a
@@ -1084,17 +1083,17 @@ ingenuidade\footnote{Ao traduzir \emph{Einfalt} (ingênuo) e
 apesar das pequenas e hábeis dobras que realiza no pergaminho e no
 exercício virtuoso de seus dedos ao desembaraçar o embaraçado.
 Conclusão: ele destruiu e perdeu seu instinto; não pode mais confiar e
-saltar as rédeas do ``animal divino'', se seu entendimento claudica e
-seu caminho conduz ao deserto. Assim o indivíduo se torna temeroso e
-inseguro e não pode mais acreditar em si mesmo: ele afunda em si mesmo,
+soltar as rédeas do ``animal divino'', se seu entendimento claudica e
+seu caminho conduz ao deserto. Assim, o indivíduo se torna temeroso e
+inseguro e não pode mais acreditar em si mesmo, ele afunda em si mesmo,
 no interior, o que aqui quer dizer apenas: na mixórdia acumulada do que
 aprendeu, que não produz efeitos exteriores, do aprendizado que não se
 tornou vida. Se se olha para o exterior, percebe-se como o exorcismo dos
-instintos recriou o homem quase que numa forma de pura de
+instintos recriou o homem quase que numa forma pura de
 \emph{abstractis} e sombra. Ninguém mais ousa apresentar-se em sua
 pessoa; mascara-se de homem culto, erudito, escritor, político.
 Arrancam-se essas máscaras acreditando tratar-se de algo sério, e não
-apenas teatro de bonecos-- já que todos eles exibem seriedade --, e de
+apenas teatro de bonecos -- já que todos eles exibem seriedade --, e de
 repente só se tem nas mãos trapos e farrapos coloridos. Por isso ninguém
 deve mais se deixar enganar, por isso se lhes deve recriminar: ``Tirem
 suas vestes ou sejam o que parecem ser''. Quem possui aquela seriedade
@@ -1120,7 +1119,7 @@ essa veracidade viria à luz a carência, a miséria interior do homem
 moderno, e, no lugar da convenção e do mascaramento ocultos com temor,
 poderiam surgir então, como verdadeiras assistentes, a arte e a
 religião, para, juntas, semear uma cultura que corresponda às
-verdadeiras necessidades, e não a atual cultura geral, que ensina a
+verdadeiras necessidades, e não à atual cultura geral, que ensina a
 mentir sobre essas necessidades e assim tornar-se uma mentira ambulante.
 
 Em que condições inaturais, artificiais e em todo caso indignas se
@@ -1145,7 +1144,7 @@ pensa-se, escreve-se, publica-se, fala-se, ensina-se filosoficamente --
 até aí quase tudo é permitido; apenas na ação, na assim chamada vida, a
 coisa é diferente: aqui sempre só uma coisa é permitida e todo o resto é
 simplesmente impossível -- assim o quer a cultura histórica. Ainda são
-homens, pode-se perguntar, ou talvez apenas máquinas de pensar, escrever
+homens -- pode-se perguntar -- ou talvez apenas máquinas de pensar, escrever
 e falar?
 
 Certa vez, Goethe disse de Shakespeare\footnote{Ensaio ``Shakespeare und
@@ -1159,11 +1158,11 @@ também seria possível representar nossos atuais literatos, cidadãos,
 funcionários públicos, políticos, como romanos; não seria possível, pois
 eles não são homens, e sim compêndios encarnados e igualmente abstrações
 concretas. Se tivessem caráter e natureza própria, enterrariam tudo isso
-fundo o suficiente para não mais emergisse à luz do dia: se fossem
+fundo o suficiente para que não mais emergisse à luz do dia: se fossem
 homens, só o seriam para Aquele ``que sonda os rins''\footnote{Ironia
-  que utiliza as passagens do Salmo 7, 10 e de Jeremias 11,20, onde Deus
+  que utiliza as passagens do Salmo 7, 10 e de Jeremias 11, 20, nas quais Deus
   é descrito como Aquele que ``sonda o coração e os rins'', no sentido
-  de que Ele examina interiormente e profundamente o caráter de uma
+  de que Ele examina interior e profundamente o caráter de uma
   pessoa.}. Para todos os outros, seriam algo diferente, nem homens, nem
 deuses, nem animais, e sim produtos de cultura histórica, inteiramente
 formação, imagem, forma sem conteúdo comprovável, infelizmente má forma,
@@ -1179,7 +1178,7 @@ fortes; ela extingue completamente as fracas}. Nisso repousa o fato de
 que ela confunde o sentimento e a sensação naqueles que não são fortes o
 suficiente para medir em si mesmos o passado. Aquele que não mais ousa
 confiar em si, mas que involuntariamente recorre à história, pedindo-lhe
-conselho para seu sentir: ``como devo sentir?'', torna-se
+conselho para seu sentir: ``como devo sentir?'' Torna-se
 paulatinamente, por medo, um ator que representa um papel, na maioria
 das vezes muitos papéis, todos mal e superficialmente. Aos poucos se
 perde totalmente a coerência entre o homem e sua esfera histórica; vemos
@@ -1189,7 +1188,7 @@ se esses \emph{corpora} lá estivessem para ser dissecados e fossem
 \emph{vilia}\footnote{\emph{Corpora vilia} (corpos vis, sem valor).
   Corpos considerados sem valor e por isso utilizados em experimentos.},
 como são os seus próprios \emph{corpora} literários. Supondo que alguém
-trabalhe com Demócrito; sempre me vem uma pergunta: por que não
+trabalhe com Demócrito, sempre me vem uma pergunta: por que não
 Heráclito? Ou Fílon? Ou Bacon? Ou Descartes, e assim por diante? Por que
 não um escritor, um orador? E ainda: por que afinal um grego, por que
 não um inglês, um turco? Não é o passado grande o suficiente para que se
@@ -1199,10 +1198,10 @@ Mas, como dissemos, é uma geração de eunucos; para o eunuco toda mulher
 não importa o que fazem, se a história mesma permanecer conservada bela
 e ``objetivamente'' por aqueles que nunca poderão por si mesmos fazer
 história. E como nunca serão elevados pelo eterno feminino\footnote{Menção
-  ao final do segundo livro do Fausto, de Goethe: ``O eterno feminino
-  nos eleva''.}, afastam-se dele e tomam, como neutros, também a própria
-a história como neutra. Com isso, não se acredite que comparo seriamente
-a história com o eterno feminino; quero ao contrário expressar com
+  ao final do segundo livro do \emph{Fausto}, de Goethe: ``O eterno feminino
+  nos eleva''.}, afastam-se dele e tomam, neutros, também a própria
+história como neutra. Com isso, não se acredite que comparo seriamente
+a história com o eterno feminino; quero, ao contrário, expressar com
 clareza que a considero o eterno masculino, que, para aqueles que são
 inteiramente ``cultivados em assuntos históricos'', é indiferente ser
 homem ou mulher, ou mesmo a comunhão de ambos; eles são sempre neutros
@@ -1231,7 +1230,7 @@ acordo em considerar muitas críticas como um sucesso
   esclarecer o jogo de palavras aqui presente.} Mas no fundo permanece,
 mesmo em tal ``efeito'' {[}\emph{Wirkung}{]} obtido, algo de antigo:
 embora se tagarele tanto tempo sobre o novo, nesse ínterim novamente se
-faz o que sempre foi feito A cultura histórica de nossos críticos não
+faz o que sempre foi feito. A cultura histórica de nossos críticos não
 mais permite que ocorra um efeito no seu sentido próprio, ou seja, um
 efeito na vida e na ação; eles passam seu mata-borrão na tinta mais
 escura dos escritos, passam seu pincel grosso sobre as palavras mais
@@ -1239,7 +1238,7 @@ graciosas, como se fossem correções: aquilo já é novamente passado. A
 pena dos críticos nunca para de escrever, pois eles perderam o controle
 sobre ela; eles não a conduzem, são por ela conduzidos. Justamente nessa
 falta de medida de sua efusão crítica, nessa ausência de domínio sobre
-si mesmo, que os romanos chamavam \emph{impotentia}, revela-se a
+si mesmos, que os romanos chamavam \emph{impotentia}, revela-se a
 fraqueza da personalidade moderna.
 
 \chapter{Capítulo 6}\label{capuxedtulo-6}
@@ -1255,11 +1254,11 @@ não seduz, talvez, a uma presunção danosa, excessivamente lisonjeira, a
 respeito das virtudes dos homens modernos? -- Sócrates considerava uma
 enfermidade próxima da loucura imaginar possuir uma virtude que não se
 possui: e certamente tal delírio é mais perigoso do que o desvario
-oposto de pensar cometer um pecado, um vício. Pois por meio deste
+oposto de pensar cometer um pecado, um vício. Pois por meio desse
 desvario talvez seja possível se tornar melhor; mas aquele delírio torna
-os homens ou sua época a cada dia pior, ou seja -- nesse caso, injusto.
+os homens ou sua época, a cada dia, piores, ou seja -- nesse caso, injustos.
 
-Certamente ninguém tem aquela pretensão à reverência em maior grau do
+Certamente, ninguém tem aquela pretensão à reverência em maior grau do
 que aquele que possui a força e o anseio de justiça. Pois nela unem-se e
 ocultam-se as maiores e mais raras virtudes, como um mar abissal que
 produz e absorve correntes por todos os lados. A mão do justo foi feita
@@ -1292,16 +1291,16 @@ raro a virtude da justiça estar presente; ela é pouco conhecida e quase
 sempre odiada de morte: ao contrário, o bando dos aparentes virtuosos de
 toda época é venerado e amado ostensivamente. Na verdade, poucos servem
 à verdade, pois apenas poucos possuem a vontade pura de ser justos e,
-mesmos entre estes, pouquíssimos possuem a força de poder ser justos.
+mesmo entre estes, pouquíssimos possuem a força de poder ser justos.
 Para isso, não basta apenas possuir a vontade: e os mais terríveis
 sofrimentos dos homens provêm justamente do impulso de justiça aliado à
 incapacidade de julgar. Por isso, para o bem-estar geral, nada mais se
 exigiria senão espalhar as sementes da faculdade de julgar da forma mais
 ampla possível, para diferenciar o fanático do juiz, o desejo cego de
-ser juiz da força consciente de poder ser juiz. Mas onde se encontraria
-o solo para plantar a faculdade de julgar! -- por isso, quando falam de
+ser juiz da força consciente de poder sê-lo. Mas onde se encontraria
+o solo para plantar a faculdade de julgar! Por isso, quando falam de
 verdade e justiça para os homens, estes sempre ficam indecisos, sem
-saber se quem fala com eles é um fanático ou um juiz. Por isso, deve-se
+saber se quem fala com eles é um fanático ou um juiz. Por essa razão, deve-se
 desculpá-los por sempre saudarem, com particular benevolência, aqueles
 ``serviçais da verdade'', que não possuem nem a vontade nem a força de
 julgar e assumem a tarefa de procurar o conhecimento ``puro, sem
@@ -1311,8 +1310,8 @@ julgamento não depende de superação, muito menos de sacrifício. Nessas
 esferas indiferentes e inofensivas, ocorre de um homem se tornar um frio
 demônio do conhecimento, apesar disso! Se mesmo em épocas
 particularmente favorecidas legiões inteiras de eruditos e pesquisadores
-se transformaram nesses demônios, infelizmente ainda é possível que
-nesta época careça da justiça grande e rigorosa, em resumo, do núcleo
+se transformaram nesses demônios, infelizmente, ainda é possível que
+nesta época careça-se da justiça grande e rigorosa, em resumo, do núcleo
 mais nobre do assim chamado impulso à verdade.
 
 Que se coloque diante dos olhos o virtuose histórico da atualidade: é
@@ -1320,7 +1319,7 @@ ele o mais justo dos homens de sua época? É verdade que ele cultivou
 aquela delicadeza e suscetibilidade da sensação de que nada humano lhe é
 distante: as épocas e pessoas mais diversas ecoam, em sua lira, em tons
 harmoniosos; ele se tornou um passivo ressonador que ecoa, que com seu
-eco provoca outros passivos similares: até que esses ecos vibrantes,
+eco provoca outros passivos similares, até que esses ecos vibrantes,
 delicados e harmoniosos preenchem confusamente o ar de uma época. Mas me
 parece que se escutam apenas os harmônicos mais agudos da sonoridade
 histórica original: não se pode mais adivinhar, a partir do som agudo e
@@ -1333,7 +1332,7 @@ pretensões do homem moderno para a justiça superior e pura se apresentam
 para esses virtuoses; essa virtude nada tem de agradável, não conhece
 nenhuma oscilação estimulante; é rígida e terrível. Em sua régua, a
 magnanimidade está na parte inferior da escala da virtude, a
-magnanimidade, que é a característica de um historiador raro e singular!
+magnanimidade que é a característica de um historiador raro e singular!
 Mas muitos alcançam a tolerância, a indiferença e a edulcoração
 massificada e benevolente, na arguta suposição de que o homem
 inexperiente interpreta como virtude da justiça a narração do passado
@@ -1341,19 +1340,19 @@ sem uma entonação áspera e sem expressão de ódio. Mas apenas a força
 superior pode julgar; o fraco tem de tolerar, caso não finja ser forte e
 não queira fazer a justiça posar de comediante na cadeira do juiz. Resta
 ainda uma temível espécie de historiador, de caráter bravo, rigoroso e
-honesto -- mas de cabeça estreita; aqui a boa vontade é justa e se
-apresenta como o \emph{páthos} da magistratura: mas suas sentenças são
+honesto -- mas de cabeça estreita --, aqui a boa vontade é justa e se
+apresenta como o \emph{páthos} da magistratura, mas suas sentenças são
 equivocadas, mais ou menos como, pelos mesmos motivos, são equivocadas
-as sentenças de juris comuns. Como é também improvável a ocorrência do
-talento histórico! Deixando de lado aqui os egoístas e partidários
-disfarçados, que, fingindo, fazem feições justas e objetivas. Excluindo
+as sentenças de júris comuns. Como é também improvável a ocorrência do
+talento histórico! Deixando de lado, aqui, os egoístas e partidários
+disfarçados que, fingindo, fazem feições justas e objetivas. Excluindo
 também as pessoas totalmente desarrazoadas, que ingenuamente escrevem,
 como historiadores, que sua época tem razão em todos os pontos de vista
 populares e que escrever de acordo com sua época significa ser justo;
 uma fé que anima toda religião e sobre a qual, nas religiões, nada mais
 temos a dizer. Esses historiadores ingênuos chamam ``objetividade''
 medir as opiniões e os fatos passados a partir das opiniões difundidas
-no momento: aqui eles encontram o cânone de toda verdade: seu trabalho é
+no momento, aqui eles encontram o cânone de toda verdade: seu trabalho é
 ajustar o passado à trivialidade atual. Caso contrário, chamam de
 subjetivista toda historiografia que não toma a opinião popular como
 canônica.
@@ -1366,9 +1365,9 @@ Pense-se naquele fenômeno estético, naquela libertação de interesse
 pessoal com que o pintor vê, em uma paisagem tempestuosa, um mar revolto
 sob raios e trovões, sua imagem interior, quer dizer, a imersão completa
 nas coisas: é contudo uma superstição dizer que a imagem com que as
-coisas se apresentam a esse homem assim forjado reproduzisse a
+coisas se apresentam a esse homem, assim forjado, reproduzisse a
 existência empírica das coisas. Ou as coisas deveriam, em todo momento,
-em sua atividade, ser igualmente desenhadas, retratadas, fotografadas em
+em sua atividade, serem igualmente desenhadas, retratadas, fotografadas em
 uma passividade pura?
 
 Isso seria uma mitologia, e das ruins além disso. Nela se esqueceria que
@@ -1377,26 +1376,28 @@ mais forte e ativo, um momento de composição do tipo mais superior, cujo
 resultado será uma pintura artisticamente verdadeira, e não
 historicamente verdadeira. Desse modo, pensar a história objetivamente é
 o trabalho silencioso do dramaturgo; ou seja, pensar tudo em correlação,
-tecer o particular em um todo: com o pressuposto geral de que se deveria
+tecer o particular em um todo -- com o pressuposto geral de que se deveria
 colocar a unidade do plano nas coisas, caso já não esteja nelas. Assim o
 homem inventa o passado e o exorciza, assim seu impulso artístico se
 exterioriza -- mas não o seu impulso à verdade e à justiça. Objetividade
 e justiça não têm nada a ver uma com a outra. Seria possível pensar em
 uma historiografia que não tivesse em si nenhuma gota de verdade
-empírica comum e contudo pretendesse receber o predicado de objetividade
+empírica comum e, contudo, pretendesse receber o predicado de objetividade
 em seu mais alto grau. Aliás, Grillparzer ousa explicar:
 
-``o que é a história senão a forma como o espírito do homem assimila os
+\begin{quote} 
+O que é a história senão a forma como o espírito do homem assimila os
 \emph{eventos que lhe são impenetráveis}; aquilo que, Deus sabe como,
-faz correlações; o incompreensível é substituído pelo compreensível;
+faz correlações. O incompreensível é substituído pelo compreensível;
 impõe seu conceito de finalidade externa a uma totalidade que só conhece
 a finalidade interna; admite sempre o acaso, onde atuaram milhares de
 pequenas causas. Todo homem tem igualmente sua necessidade individual,
-de tal modo que milhões de direções correm paralelamente em linhas retas
+de tal modo que milhões de direções correm, paralelamente, em linhas retas
 e oblíquas, que se cruzam, se impedem, se impelem para frente e para
 trás e assim admitem, entre si, o caráter de acaso e de tal modo que,
 excetuando as intervenções dos eventos naturais, tornam impossível
 provar uma necessidade apreensível e abrangente daquilo que ocorre''.
+\end{quote}
 
 Mas é justamente essa necessidade que aquele olhar ``objetivo'' das
 coisas deve trazer à luz! Isso é um pressuposto que, quando é expresso
@@ -1418,15 +1419,15 @@ verdade enigmática quanto uma inverdade patente; como o dito do
 jardineiro goethiano: ``a natureza se deixar forçar, mas não a se
 coagir''\footnote{Carta de Goethe a Schiller, de 21/02/1798.}, ou na
 inscrição de uma barraca de quermesse, contada por Swift: ``Aqui se
-encontra, com exceção de si mesmo, o maior elefante do mundo''. Qual é
-contudo a oposição entre ação e impulso humanos e o curso das coisas?
+encontra, com exceção de si mesmo, o maior elefante do mundo''. Qual é,
+contudo, a oposição entre ação e impulso humanos e o curso das coisas?
 Ocorre-me que historiadores como aqueles cuja frase citamos não mais
 ensinam, assim que universalizam, e mostram o sentimento de sua fraqueza
 no escuro. Em outras ciências, a universalidade é o mais importante, uma
 vez que ela contém as leis: se a frase por nós mencionada valesse como
 lei, então se teria de retrucar que o trabalho historiográfico
 desapareceria; pois o que sobra de verdade na frase, com a retirada do
-resto obscuro e indissolúvel, sobre o qual falamos -- é algo conhecido e
+resto obscuro e indissolúvel, sobre o qual falamos, é algo conhecido e
 mesmo trivial; pois ocorre a todos na pequena esfera da experiência. Por
 isso, o incômodo de povos inteiros e anos de trabalho exaustivo nada
 significaram, nas ciências naturais, senão o acúmulo de experimento
@@ -1447,14 +1448,14 @@ Para isso, é preciso sobretudo uma grande potência artística, um pairar
 criador sobre as coisas, uma imersão apaixonada nos dados empíricos, uma
 poetização de tipos dados, a isso pertence a objetividade, mas como
 qualidade positiva. No entanto, frequentemente a objetividade é
-tão-somente um chavão. No lugar daquela serenidade, internamente
+tão somente um chavão. No lugar daquela serenidade, internamente
 lampejante e externamente imóvel e obscura, do olhar artístico, surge a
 afetação de serenidade; como a ausência de \emph{páthos} e de força
 moral costuma se travestir de frieza penetrante da observação. Em certos
 casos, a banalidade do pensamento, a sabedoria banal, que apenas por seu
 tédio causa a impressão de serenidade, ousa apresentar-se como
 tranquilidade, a fim de valer como aquele estado artístico em que o
-sujeito silencia e se torna completamente imperceptível. Então é ansiado
+sujeito silencia e se torna completamente imperceptível. Então, é ansiado
 tudo o que não intranquiliza e a mais seca palavra é justa. Aliás,
 chega-se ao ponto de se consentir que se tenha como ocupação a
 representação de um momento do passado que \emph{em nada lhe importa}.
@@ -1473,9 +1474,9 @@ se a tarefa de toda época fosse a de ser justo com tudo que já existiu!
 Nunca épocas ou gerações tiveram direito a ser juízas de todas as épocas
 e gerações passadas: ao contrário, somente aos indivíduos, justamente
 aos mais raros, ocorreu missão tão desconfortável. Quem os coage a
-julgar? E então -- provem apenas que podem ser justos quando quiserem!
+julgar? E então, provem apenas que podem ser justos quando quiserem!
 Como juízes, devem estar acima do réu; contudo, só chegam tardiamente.
-Os convidados que chegam por último à mesa devem com razão receber os
+Os convidados que chegam por último à mesa devem, com razão, receber os
 últimos lugares; e querem ter os primeiros? Façam ao menos o mais
 elevado e grandioso; talvez assim lhes sejam oferecidos os primeiros
 lugares, mesmo quando chegarem por último.
@@ -1495,7 +1496,7 @@ historiador, um homem artístico e um cabeça-oca: ao contrário, não se
 deve subestimar os trabalhadores braçais que carregam, extraem e
 examinam pela certeza de que eles não podem tornar-se grandes
 historiadores; muito menos confundi-los com estes últimos, mas
-compreendê-los como aprendizes e ajudantes braçais a serviço do mestre:
+compreendê-los como aprendizes e ajudantes braçais a serviço do mestre,
 assim como os franceses, com mais ingenuidade do que os alemães,
 costumam falar dos \emph{historiens de} M. Thiers\footnote{Lous A.
   Thiers (1797-1877), historiador francês. O sentido da expressão em
@@ -1517,7 +1518,7 @@ analítico exagerado que desertifica o presente e impossibilitara toda
 tranquilidade, todo crescimento pacífico e amadurecimento. Puxem para si
 a cerca de uma esperança grande e abrangente de um impulso esperançoso.
 Formem em si uma imagem que deva corresponder ao futuro e esqueçam a
-superstição de ser epígonos. Os senhores têm bastante sobre que refletir
+superstição de serem epígonos. Os senhores têm bastante sobre que refletir
 e inventar quando refletem sobre a vida futura; mas não perguntem à
 história se ela mostra o ``como?'', o ``porquê?''. Se os senhores, ao
 contrário, viverem a história dos grandes homens, aprenderão o
